public record DeviceState(StateType currentState) {
}
