public interface Phone {
    void makeCall();
    void receiveCall();
    void sendSMS();
    void receiveSMS();
    void endCall();
    void holdCall();
    void loudSpeaker();
}
