public enum StateType {
    PLAYING,
    PAUSED,
    STOPPED,
    RECEIVING_CALL,
    SURFING_WEB
}
